Added --add-opens to JVM flags to fix tests that use reflection.